Agregando CSS básico

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Hola Mundo</title>
+	<style type="text/css">
+	body{
+	bgcolor: #ccc;
+	color: #fff;
+	}
+	h1{
+	text-align: center;
+	}
+	</style>
 </head>
 <body>
 <h1>¡Hola Mundo!</h1>
