--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<title>Hola Mundo</title>
 	<style type="text/css">
 	body{
-	bgcolor: #ccc;
-	color: #fff;
+	background-color: #333;
+	color: #ccc;
+	font-family: Verdana, Arial, Sans-serif;
 	}
 	h1{
 	text-align: center;
@@ -16,6 +17,6 @@
 <body>
 <h1>¡Hola Mundo!</h1>
 <p>Esta es una prueba para generar una aplicación usando PhoneGap.</p>
-<p>Se supone que, como mínimo, necesita una página index.html, y se puede usar CSS y JavaScript al gusto de uno, además de las APIs específicas para smartphone, como cámaras, geoocalización y almacenamiento en el teléfono.</p>
+<p>Se supone que, como mínimo, necesita una página index.html, y se puede usar CSS y JavaScript al gusto de uno, además de las APIs específicas para smartphone, como cámaras, geolocalización y almacenamiento en el teléfono.</p>
 </body>
 </html>
